[metadata]
name = smashcache
author = Sachi King
author-email = nakato@nakto.io
summary = 
description-file =
    README.rst
home-page = http://nakato.io
requires-python = >=3.4

[files]
packages = smashcache

[entry_points]
console_scripts =
    smashcache-server = smashcache.cmd.main:main
    smashcache-server-debug = smashcache.cmd.main:debug

[wheel]
universal = 1
